Update various auto-format errors x2

--- a/_mdx/projects/ai/natural-language-processing.mdx
+++ b/_mdx/projects/ai/natural-language-processing.mdx
@@ -2,7 +2,7 @@
 title: Implement a Natural Language Processing Tool for Sentiment Analysis or Topic Modeling
 tags: NLP, sentiment analysis, topic modeling
 description: Build a natural language processing tool for sentiment analysis or topic modeling to analyze and understand text data
-expertise: moderate
+expertise: intermediate
 thumbId: ttfhV7FxIxw
 ---
 
