--- a/_mdx/projects/backend/distributed-version-control-system.mdx
+++ b/_mdx/projects/backend/distributed-version-control-system.mdx
@@ -2,7 +2,7 @@
 title: Distributed Version Control System
 tags: java, version control, git
 description: a distributed version control system (DVCS) implemented in Java, featuring branching, merging, and conflict resolution
-expertise: expert
+expertise: advanced
 thumbId: wX2L8L-fGeA
 ---
 
