--- a/_mdx/projects/backend/initial-rest-java.mdx
+++ b/_mdx/projects/backend/initial-rest-java.mdx
@@ -2,7 +2,7 @@
 title: Initial Rest API
 tags: java, micro-service, backend
 description: Create a simple Rest API within a MVC Framework of your choice.
-expertise: beginner
+expertise: easy
 thumbId: QUHuwyNgSA0
 ---
 
