--- a/_mdx/projects/backend/news-aggregator.mdx
+++ b/_mdx/projects/backend/news-aggregator.mdx
@@ -2,7 +2,7 @@
 title: Java News Aggregator
 tags: java, web development, API, database
 description: a simple news aggregator application using a web framework, a database, and an external news API
-expertise: beginner
+expertise: easy
 thumbId: _Zua2hyvTBk
 ---
 
