--- a/_mdx/projects/backend/pokemon-rest-api.mdx
+++ b/_mdx/projects/backend/pokemon-rest-api.mdx
@@ -2,7 +2,7 @@
 title: Create a Pokémon REST API
 tags: web development, API, backend, Pokémon
 description: Build a REST API for managing a database of Pokémon
-expertise: beginner
+expertise: easy
 thumbId: P7gF_dvZ-7w
 ---
 
