--- a/_mdx/projects/backend/search-engine.mdx
+++ b/_mdx/projects/backend/search-engine.mdx
@@ -2,7 +2,7 @@
 title: Java Search Engine
 tags: java, search engine, web crawling, indexing, ranking
 description: a search engine that crawls, indexes, and ranks web pages using Java
-expertise: expert
+expertise: advanced
 thumbId: zhZydTyNMPg
 ---
 
