--- a/_mdx/projects/data/audio-visual-manipulation.mdx
+++ b/_mdx/projects/data/audio-visual-manipulation.mdx
@@ -2,7 +2,7 @@
 title: Advanced Audio/Video Manipulation
 tags: python, audio, video, PyDub, MoviePy
 description: a program that performs advanced audio and video manipulation tasks using PyDub and MoviePy
-expertise: expert
+expertise: advanced
 thumbId: jhLKriqv3DE
 ---
 
