--- a/_mdx/projects/data/email-automation.mdx
+++ b/_mdx/projects/data/email-automation.mdx
@@ -2,7 +2,7 @@
 title: Email Automation
 tags: python, automation, email
 description: a program that automates the process of sending and receiving emails using libraries like IMAPClient or SMTPLib
-expertise: expert
+expertise: advanced
 thumbId: 3Mhgvrk4tjM
 ---
 
