--- a/_mdx/projects/data/network-analysis.mdx
+++ b/_mdx/projects/data/network-analysis.mdx
@@ -2,7 +2,7 @@
 title: Advanced Network Analysis
 tags: python, networking, data analysis
 description: a program that performs advanced network analysis tasks using Python
-expertise: expert
+expertise: advanced
 thumbId: 40XgDxBfYXM
 ---
 
