--- a/_mdx/projects/devops/config-management-system.mdx
+++ b/_mdx/projects/devops/config-management-system.mdx
@@ -2,7 +2,7 @@
 title: Implement a Configuration Management System
 tags: configuration management, automation, Ansible, Puppet, Chef
 description: Use a configuration management tool such as Ansible, Puppet, or Chef to automate the setup and management of servers and applications
-expertise: moderate
+expertise: intermediate
 thumbId: jNxPxI3a_lQ
 ---
 
