--- a/_mdx/projects/devops/containerization-platform.mdx
+++ b/_mdx/projects/devops/containerization-platform.mdx
@@ -2,7 +2,7 @@
 title: Build a Containerization Platform
 tags: Docker, Kubernetes, containerization
 description: Use Docker and Kubernetes to build a containerization platform for deploying applications
-expertise: moderate
+expertise: intermediate
 thumbId: GpJ9Xx7S1TA
 ---
 
