--- a/_mdx/projects/devops/deployment-pipeline-web-app.mdx
+++ b/_mdx/projects/devops/deployment-pipeline-web-app.mdx
@@ -2,7 +2,7 @@
 title: Create a Deployment Pipeline for a Web Application
 tags: deployment, automation, cloud platform
 description: Build a deployment pipeline for a web application, including integration with a cloud platform such as AWS or GCP
-expertise: moderate
+expertise: intermediate
 thumbId: xV7K_fkJgTM
 ---
 
