--- a/_mdx/projects/devops/log-aggregation-and-analysis.mdx
+++ b/_mdx/projects/devops/log-aggregation-and-analysis.mdx
@@ -2,7 +2,7 @@
 title: Implement a Log Aggregation and Analysis Platform
 tags: log aggregation, analysis, Elasticsearch, Logstash, Kibana
 description: Use Elasticsearch, Logstash, and Kibana (ELK) to build a log aggregation and analysis platform
-expertise: moderate
+expertise: intermediate
 thumbId: sO6O-L6Bct8
 ---
 
