--- a/_mdx/projects/devops/monitoring-alert-system-distributed-apps.mdx
+++ b/_mdx/projects/devops/monitoring-alert-system-distributed-apps.mdx
@@ -2,7 +2,7 @@
 title: Build a Monitoring and Alerting System
 tags: monitoring, alerting, distributed application
 description: Create a monitoring and alerting system to track the health and performance of a distributed application
-expertise: moderate
+expertise: intermediate
 thumbId: yJcYOaFv_zE
 ---
 
