--- a/_mdx/projects/frontend/basic-admin-dashboard.mdx
+++ b/_mdx/projects/frontend/basic-admin-dashboard.mdx
@@ -2,7 +2,7 @@
 title: Build a Basic Admin Dashboard for JavaScript Frameworks
 tags: web development, JavaScript, frameworks
 description: Create a simple admin dashboard using a JavaScript framework
-expertise: beginner
+expertise: easy
 thumbId: 5h2jg5JH5Iw
 ---
 
