--- a/_mdx/projects/frontend/basic-image-gallery.mdx
+++ b/_mdx/projects/frontend/basic-image-gallery.mdx
@@ -2,7 +2,7 @@
 title: Image Gallery
 tags: javascript, html, css
 description: a simple image gallery using HTML, CSS, and JavaScript
-expertise: beginner
+expertise: easy
 thumbId: cYyqhdbJ9TI
 ---
 
