--- a/_mdx/projects/frontend/initial-react.mdx
+++ b/_mdx/projects/frontend/initial-react.mdx
@@ -2,7 +2,7 @@
 title: JavaScript Fundamentals
 tags: web development, JavaScript
 description: Learn the basics of JavaScript programming
-expertise: beginner
+expertise: easy
 thumbId: 7hZ2iCot8Wk
 ---
 
