--- a/_mdx/projects/frontend/pokemon-pokedex-vanillajs.mdx
+++ b/_mdx/projects/frontend/pokemon-pokedex-vanillajs.mdx
@@ -2,7 +2,7 @@
 title: Pokemon Pokedex shower
 tags: web, javascript, typescript
 description: simple pokedex displayer in JS, HTML and CSS
-expertise: beginner
+expertise: easy
 thumbId: dip9IIwUK6w
 ---
 
