--- a/_mdx/projects/frontend/simple-calculator.mdx
+++ b/_mdx/projects/frontend/simple-calculator.mdx
@@ -2,7 +2,7 @@
 title: Calculator
 tags: javascript, html, css
 description: a simple calculator application using HTML, CSS, and JavaScript
-expertise: beginner
+expertise: easy
 thumbId: GlavtG-umzE
 ---
 
