--- a/_mdx/projects/frontend/tic-tac-toe-vanilliajs.mdx
+++ b/_mdx/projects/frontend/tic-tac-toe-vanilliajs.mdx
@@ -2,7 +2,7 @@
 title: Tic Tac Toe
 tags: javascript, html, ganmes
 description: a simple Tic Tac Toe game using HTML, CSS, and JavaScript
-expertise: beginner
+expertise: easy
 thumbId: -yhBOqHOr0c
 ---
 
