--- a/_mdx/projects/games/text-based-adventure-game.mdx
+++ b/_mdx/projects/games/text-based-adventure-game.mdx
@@ -2,7 +2,7 @@
 title: Text-Based Adventure Game
 tags: python, game development, text adventure
 description: a simple text-based adventure game where the user can navigate through a series of rooms and interact with objects and characters
-expertise: beginner
+expertise: easy
 thumbId: LJ9KY8pIH3E
 ---
 
