--- a/_mdx/projects/frontend/virtual-reality-image-gallery.mdx
+++ b/_mdx/projects/frontend/virtual-reality-image-gallery.mdx
@@ -2,7 +2,7 @@
 title: Virtual Reality Experience Creator
 tags: javascript, html, css, virtual reality, 360-degree media
 description: a web application that allows users to create and share their own virtual reality experiences using 360-degree photos and videos
-expertise: expert
+expertise: advanced
 thumbId: HI6gy-p-WBI
 ---
 
