Updating thumbnails on images

--- a/_mdx/projects/ai/ai-image-training.mdx
+++ b/_mdx/projects/ai/ai-image-training.mdx
@@ -3,6 +3,7 @@ title: AI Image Training
 tags: AI, machine learning, image recognition
 description: This project will focus on training a machine learning model to accurately classify images using deep learning techniques
 expertise: intermediate
+thumbId: zwd435-ewb4
 ---
 
 In this project, we will be using a combination of convolutional neural networks (CNNs) and transfer learning to train a model to recognize and classify different types of images. We will start by gathering a large dataset of images, and then use this dataset to train and fine-tune our model.
