--- a/_mdx/projects/ai/natural-language-processing.mdx
+++ b/_mdx/projects/ai/natural-language-processing.mdx
@@ -3,7 +3,7 @@ title: Implement a Natural Language Processing Tool for Sentiment Analysis or To
 tags: NLP, sentiment analysis, topic modeling
 description: Build a natural language processing tool for sentiment analysis or topic modeling to analyze and understand text data
 expertise: intermediate
-thumbId: ttfhV7FxIxw
+thumbId: fOwb7GrCg5I
 ---
 
 In this project, we will be implementing a natural language processing tool for sentiment analysis or topic modeling to analyze and understand text data. This can be useful for a variety of applications, such as analyzing customer feedback, social media posts, or news articles.
