--- a/_mdx/projects/ai/predicting-purchases.mdx
+++ b/_mdx/projects/ai/predicting-purchases.mdx
@@ -3,7 +3,7 @@ title: Create a Machine Learning Model for Predicting Purchases
 tags: machine learning, prediction, customer behavior
 description: Build a machine learning model to predict the likelihood of a customer making a purchase based on the time of day and their browsing history
 expertise: easy
-thumbId: PnX81MV1bKQ
+thumbId: mbq0qL3ynMs
 ---
 
 In this project, we will be creating a machine learning model to predict the likelihood of a customer making a purchase based on the time of day and their browsing history. This can be useful for businesses to optimize their marketing and sales efforts and better understand customer behavior.
