--- a/_mdx/projects/backend/pokemon-rest-api.mdx
+++ b/_mdx/projects/backend/pokemon-rest-api.mdx
@@ -3,7 +3,7 @@ title: Create a Pokémon REST API
 tags: web development, API, backend, Pokémon
 description: Build a REST API for managing a database of Pokémon
 expertise: easy
-thumbId: P7gF_dvZ-7w
+thumbId: aEKwSdX5pJU
 ---
 
 In this project, we will be building a REST API for managing a database of Pokémon. The API will allow users to retrieve a list of Pokémon, a single Pokémon by ID, and Pokémon by type. It will also include features such as adding, updating, and deleting Pokémon from the database.
