--- a/_mdx/projects/data/stock-market-tracker.mdx
+++ b/_mdx/projects/data/stock-market-tracker.mdx
@@ -3,7 +3,7 @@ title: Stock Market Tracker
 tags: web, database, API, python
 description: a simple stock market tracker application using a web framework, a database, and a stock market API
 expertise: intermediate
-thumbId: FILL_ME_IN
+thumbId: N__BnvQ_w18
 ---
 
 A stock market tracker application allows users to view and search for stock information using a web framework, a database, and a stock market API. In this project, you will build a simple stock market tracker application.
