--- a/_mdx/projects/desktop/to-do-list.mdx
+++ b/_mdx/projects/desktop/to-do-list.mdx
@@ -3,7 +3,7 @@ title: To-Do List
 tags: electron, desktop
 description: a desktop based to-do-list app in electron
 expertise: intermediate
-thumbId: hXrPSgGFpqQ
+thumbId: 6aY-6B3MiZ4
 ---
 
 <h1>Project Checklist</h1>
