--- a/_mdx/projects/devops/ab-testing-canary-deployments.mdx
+++ b/_mdx/projects/devops/ab-testing-canary-deployments.mdx
@@ -3,7 +3,7 @@ title: Create a System for A/B Testing and Canary Deployments
 tags: A/B testing, canary deployments, deployment strategy
 description: Build a system for A/B testing and canary deployments to improve the reliability and performance of software updates
 expertise: advanced
-thumbId: X-Eak1w_sno
+thumbId: WC6MJ0kRzGw
 ---
 
 In this project, we will be creating a system for A/B testing and canary deployments to improve the reliability and performance of software updates. A/B testing is a technique for comparing two or more versions of a product or feature to determine which performs better, while canary deployments involve rolling out updates to a small portion of users before rolling them out to the entire user base.
