--- a/_mdx/projects/devops/config-management-system.mdx
+++ b/_mdx/projects/devops/config-management-system.mdx
@@ -3,7 +3,7 @@ title: Implement a Configuration Management System
 tags: configuration management, automation, Ansible, Puppet, Chef
 description: Use a configuration management tool such as Ansible, Puppet, or Chef to automate the setup and management of servers and applications
 expertise: intermediate
-thumbId: jNxPxI3a_lQ
+thumbId: ZV_64LdGoao
 ---
 
 In this project, we will be implementing a configuration management system using a tool such as Ansible, Puppet, or Chef. Configuration management allows us to automate the setup and management of servers and applications, ensuring that they are consistently configured and up-to-date.
