--- a/_mdx/projects/devops/containerization-platform.mdx
+++ b/_mdx/projects/devops/containerization-platform.mdx
@@ -3,7 +3,7 @@ title: Build a Containerization Platform
 tags: Docker, Kubernetes, containerization
 description: Use Docker and Kubernetes to build a containerization platform for deploying applications
 expertise: intermediate
-thumbId: GpJ9Xx7S1TA
+thumbId: 1VW6HLOQE5A
 ---
 
 In this project, we will be building a containerization platform using Docker and Kubernetes. Containerization allows us to package applications and their dependencies into lightweight, portable containers that can be easily deployed and scaled on any infrastructure.
