--- a/_mdx/projects/devops/deployment-pipeline-web-app.mdx
+++ b/_mdx/projects/devops/deployment-pipeline-web-app.mdx
@@ -3,7 +3,7 @@ title: Create a Deployment Pipeline for a Web Application
 tags: deployment, automation, cloud platform
 description: Build a deployment pipeline for a web application, including integration with a cloud platform such as AWS or GCP
 expertise: intermediate
-thumbId: xV7K_fkJgTM
+thumbId: hfiym43qBpk
 ---
 
 In this project, we will be creating a deployment pipeline for a web application, including integration with a cloud platform such as AWS or GCP. A deployment pipeline is a series of automated steps that ensure the smooth and reliable deployment of an application from development to production.
