--- a/_mdx/projects/devops/log-aggregation-and-analysis.mdx
+++ b/_mdx/projects/devops/log-aggregation-and-analysis.mdx
@@ -3,7 +3,7 @@ title: Implement a Log Aggregation and Analysis Platform
 tags: log aggregation, analysis, Elasticsearch, Logstash, Kibana
 description: Use Elasticsearch, Logstash, and Kibana (ELK) to build a log aggregation and analysis platform
 expertise: intermediate
-thumbId: sO6O-L6Bct8
+thumbId: qwtCeJ5cLYs
 ---
 
 In this project, we will be implementing a log aggregation and analysis platform using Elasticsearch, Logstash, and Kibana (ELK). ELK is a popular open-source stack for collecting, storing, and analyzing log data from distributed applications.
