--- a/_mdx/projects/devops/monitoring-alert-system-distributed-apps.mdx
+++ b/_mdx/projects/devops/monitoring-alert-system-distributed-apps.mdx
@@ -3,7 +3,7 @@ title: Build a Monitoring and Alerting System
 tags: monitoring, alerting, distributed application
 description: Create a monitoring and alerting system to track the health and performance of a distributed application
 expertise: intermediate
-thumbId: yJcYOaFv_zE
+thumbId: Bd7gNnWJBkU
 ---
 
 In this project, we will be building a monitoring and alerting system to track the health and performance of a distributed application. A distributed application is one that is spread across multiple servers or devices, making it essential to have a system in place to monitor its overall health and detect any issues.
