--- a/_mdx/projects/devops/scaling-provisioning-infrastructure.mdx
+++ b/_mdx/projects/devops/scaling-provisioning-infrastructure.mdx
@@ -3,7 +3,7 @@ title: Implement a System for Automating the Provisioning and Scaling of Infrast
 tags: infrastructure automation, provisioning, scaling
 description: Build a system for automating the provisioning and scaling of infrastructure to improve the efficiency and reliability of deployment
 expertise: advanced
-thumbId: rT7vDZWcR8Q
+thumbId: 9vQG6v1md1s
 ---
 
 In this project, we will be implementing a system for automating the provisioning and scaling of infrastructure to improve the efficiency and reliability of deployment. This can include tasks such as provisioning servers, configuring networking and security, and deploying applications and services.
