--- a/_mdx/projects/devops/serverless-application.mdx
+++ b/_mdx/projects/devops/serverless-application.mdx
@@ -3,7 +3,7 @@ title: Build a Serverless Application
 tags: serverless, cloud platform, AWS Lambda, Google Cloud Functions
 description: Use a cloud platform such as AWS Lambda or Google Cloud Functions to build a serverless application
 expertise: advanced
-thumbId: O6DlN5jYF5E
+thumbId: M5tzZtFCOfs
 ---
 
 In this project, we will be building a serverless application using a cloud platform such as AWS Lambda or Google Cloud Functions. Serverless applications are ones that are built and run without the need to worry about infrastructure, allowing developers to focus on writing code and deploying updates without worrying about servers or scaling.
