--- a/_mdx/projects/devops/simple-ci-pipeline.mdx
+++ b/_mdx/projects/devops/simple-ci-pipeline.mdx
@@ -3,7 +3,7 @@ title: Create a Simple CI Pipeline
 tags: continuous integration, automation, deployment
 description: Build a continuous integration pipeline for a small project
 expertise: easy
-thumbId: tnpO8Kjr5Ic
+thumbId: 9AxFJaNySB8
 ---
 
 In this project, we will be creating a simple continuous integration (CI) pipeline for a small project. Continuous integration is the process of automating the build and testing of code every time a change is made, ensuring that the code is always in a deployable state.
