--- a/_mdx/projects/frontend/basic-image-gallery.mdx
+++ b/_mdx/projects/frontend/basic-image-gallery.mdx
@@ -3,7 +3,7 @@ title: Image Gallery
 tags: javascript, html, css
 description: a simple image gallery using HTML, CSS, and JavaScript
 expertise: easy
-thumbId: cYyqhdbJ9TI
+thumbId: CN2FEPXERRI
 ---
 
 In this project, we will be building a basic image gallery that allows users to browse a collection of images and view a larger version with a lightbox effect. The gallery will also include navigation buttons for moving between images.
