--- a/_mdx/projects/frontend/initial-react.mdx
+++ b/_mdx/projects/frontend/initial-react.mdx
@@ -3,7 +3,7 @@ title: JavaScript Fundamentals
 tags: web development, JavaScript
 description: Learn the basics of JavaScript programming
 expertise: easy
-thumbId: 7hZ2iCot8Wk
+thumbId: UYsBCu9RP3Y
 ---
 
 In this project, we will be focusing on the fundamentals of JavaScript programming. This includes concepts such as variables, data types, loops, functions, and more. It is recommended that you have a basic understanding of HTML and CSS before attempting this project.
