--- a/_mdx/projects/frontend/to-do-list.mdx
+++ b/_mdx/projects/frontend/to-do-list.mdx
@@ -3,7 +3,7 @@ title: Build a Web-Based To-Do List
 tags: web development, to-do list, front-end
 description: Create a simple web-based to-do list application to manage tasks and keep track of progress
 expertise: easy
-thumbId: o2rO6GJ7VuQ
+thumbId: pcpsVsyFp_s
 ---
 
 In this project, we will be building a simple web-based to-do list application to manage tasks and keep track of progress. This can be useful for personal organization or for tracking team tasks and project milestones.
