--- a/_mdx/projects/misc/rust-based-cli.mdx
+++ b/_mdx/projects/misc/rust-based-cli.mdx
@@ -3,7 +3,7 @@ title: Build a Command-Line Application to Convert CSV to JSON in Rust
 tags: Rust, command-line, CSV, JSON
 description: Create a command-line application to convert a CSV file to a JSON file using the Rust programming language
 expertise: easy
-thumbId: EN-L3fZ5K5c
+thumbId: R401qwThw7w
 ---
 
 In this project, we will be building a command-line application to convert a CSV file to a JSON file using the Rust programming language. This can be useful for working with data in different formats or for integrating with APIs that require JSON input.
