--- a/_mdx/projects/mobile/fitness-tracker.mdx
+++ b/_mdx/projects/mobile/fitness-tracker.mdx
@@ -3,6 +3,7 @@ title: Create a Mobile Fitness App
 tags: mobile development, fitness, social media
 description: This project will involve building a mobile application that allows users to track their fitness activities and share them with others. The app will also include features such as personalized training plans and real-time tracking.
 expertise: intermediate
+thumbId: HM-Y497t5CU
 ---
 
 In this project, we will be creating a mobile application that helps users track and share their fitness activities. The app will allow users to log their workouts, running routes, and other fitness activities, and see their progress over time. It will also include features such as personalized training plans, social sharing, and real-time tracking.
