--- a/_mdx/projects/ai/image-recognition.mdx
+++ b/_mdx/projects/ai/image-recognition.mdx
@@ -3,7 +3,7 @@ title: Image Recognition
 tags: machine learning, python, image classification
 description: a simple image recognition application using a machine learning library and a dataset of images
 expertise: intermediate
-thumbId: f57lx37DCM4
+thumbId: mWztzk66I7Q
 ---
 
 An image recognition application allows users to classify images into different categories using a machine learning library and a dataset of images. In this project, you will build a simple image recognition application.
