--- a/_mdx/projects/ai/recommendation-engine.mdx
+++ b/_mdx/projects/ai/recommendation-engine.mdx
@@ -3,7 +3,7 @@ title: Recommendation Engine
 tags: machine learning, recommendation, python
 description: a simple recommendation engine using a machine learning library and a database
 expertise: intermediate
-thumbId: UWVJaDvXW_c
+thumbId: npxXWgQ33ZQ
 ---
 
 A recommendation engine suggests products or content to users based on their previous interactions using a machine learning library and a database. In this project, you will create a basic recommendation engine.
