--- a/_mdx/projects/frontend/basic-admin-dashboard.mdx
+++ b/_mdx/projects/frontend/basic-admin-dashboard.mdx
@@ -3,7 +3,7 @@ title: Build a Basic Admin Dashboard for JavaScript Frameworks
 tags: web development, JavaScript, frameworks
 description: Create a simple admin dashboard using a JavaScript framework
 expertise: easy
-thumbId: 5h2jg5JH5Iw
+thumbId: M1qSY_IuF4c
 ---
 
 In this project, we will be building a basic admin dashboard using a JavaScript framework such as React, Vue, or Angular. The dashboard will include features such as a user login system, a dashboard home page, and the ability to add, edit, and delete users.
