added more mobile

--- a/_mdx/projects/mobile/fitness-tracker.mdx
+++ b/_mdx/projects/mobile/fitness-tracker.mdx
@@ -1,6 +1,6 @@
 ---
 title: Create a Mobile Fitness App
-tags: mobile development, fitness, social media
+tags: mobile, fitness, swift, android
 description: This project will involve building a mobile application that allows users to track their fitness activities and share them with others. The app will also include features such as personalized training plans and real-time tracking.
 expertise: intermediate
 thumbId: HM-Y497t5CU
