README update + updating syntax on mobile projects

--- a/_mdx/projects/mobile/budgeting-app.mdx
+++ b/_mdx/projects/mobile/budgeting-app.mdx
@@ -95,4 +95,4 @@ public class BudgetActivity extends AppCompatActivity {
 }
 
 ```
-the above code snippets are just examples to give you a starting point and are not meant to be fully functional. They will likely require additional code and modifications in order to work as part of a complete budgeting app. For example, you would need to implement the Expense class, as well as handle the data storage for the income and expense input and history. Additionally, you would need to design and implement the user interface for the app, including features such as categorizing and viewing expenses, budget tracking, and viewing income and expense history over time. The above code snippets are provided as a guide to help you understand the basic concepts and techniques that would be used to build a budgeting app.
+The above code snippets are just examples to give you a starting point and are not meant to be fully functional. They will likely require additional code and modifications in order to work as part of a complete budgeting app. For example, you would need to implement the Expense class, as well as handle the data storage for the income and expense input and history. Additionally, you would need to design and implement the user interface for the app, including features such as categorizing and viewing expenses, budget tracking, and viewing income and expense history over time. The above code snippets are provided as a guide to help you understand the basic concepts and techniques that would be used to build a budgeting app.
